<resources>
    <string name="app_name">BakingApp</string>

    <!-- Strings for the recipe items -->
    <string name="recipe_image_description">Recipe Picture</string>
    <string name="recipe_name_tools">Recipe Name</string>
    <string name="recipe_servings_tools"># of Servings</string>

    <!-- Strings for the recipe ingredients -->
    <string name="ingredient_quantity">100</string>
    <string name="ingredient_measure">TBLSPN</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="add_to_widget">Add to widget</string>

    <!-- Strings for the widget -->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
