<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_ingredient_quantity"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        tools:text="@string/ingredient_quantity" />

    <TextView
        android:id="@+id/tv_ingredient_measure"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        tools:text="@string/ingredient_measure" />

    <TextView
        android:id="@+id/tv_ingredient_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:text="@string/ingredient_name" />

</LinearLayout>