<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_recipe_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/recipe_image_description"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/recipe_name_tools"
        app:layout_constraintTop_toBottomOf="@id/iv_recipe_picture"
        app:layout_constraintLeft_toLeftOf="@id/iv_recipe_picture"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_recipe_servings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/recipe_servings_tools"
        app:layout_constraintTop_toBottomOf="@id/tv_recipe_name"
        app:layout_constraintLeft_toLeftOf="@id/tv_recipe_name"
        android:layout_marginTop="8dp" />

</android.support.constraint.ConstraintLayout>